--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "author": "Achraf Chouk <achrafchouk@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.4",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-less": "^1.3.0",
-    "load-grunt-config": "^0.19.2"
+    "load-grunt-config": "^0.19.2",
+    "lodash.merge": "^4.6.1"
   },
   "dependencies": {
     "time-grunt": "^1.3.0"
