add Artemis to a very new high level with a better Zeus core integration and text domain loader

--- a/tasks/aliases.yaml
+++ b/tasks/aliases.yaml
@@ -1,6 +1,5 @@
-# Default action to create all css
-default:
-  description: 'Build minified & production-ready files.'
+assets:
+  description: 'Build assets into resources directories and clean temporary ones'
   tasks:
     # Clean target fodlers
     - 'clean:app'
@@ -13,3 +12,27 @@ default:
     # Minify images and clean source folders
     - 'imagemin:app'
     - 'clean:src'
+
+textdomain:
+  description: 'Build MO files from JSON languages'
+  tasks:
+    # Clean MO old files
+    - 'clean:mo'
+    # Add text domain in PHP files and check everything is fine
+    - 'addtextdomain:app'
+    - 'checktextdomain:app'
+    # Generate POT and PO files
+    - 'makepot:app'
+    # Generate MO files and remove PO files
+    - 'potomo:app'
+    # Clean POT file
+    - 'clean:pot'
+
+# Default action to create all css
+default:
+  description: 'Build minified production-ready and MO files from LESS & JSON sources'
+  tasks:
+    # Build assets
+    - 'assets'
+    # Build MO files
+    - 'textdomain'
