--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^1.0.4",
+    "grunt-checktextdomain": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-less": "^1.3.0",
-    "load-grunt-config": "^0.19.2",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-potomo": "^3.5.0",
+    "grunt-wp-i18n": "^1.0.3",
+    "load-grunt-config": "^1.0.2",
     "lodash.merge": "^4.6.1"
   },
   "dependencies": {
