--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: php
 sudo: false
 php:
-  - 7.0
-  - nightly
+  - 7.3
+  - 7.2
+  - 7.1
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - php: nightly
 
 cache:
   directories:
@@ -15,7 +14,7 @@ cache:
     - vendor
 
 before_install:
-  - phpenv config-rm xdebug.ini
+  - if [[ !$XDEBUG ]]; then phpenv config-rm xdebug.ini; fi
   - composer self-update
 
 install:
